--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-node": "^1.1.0"
+		"@sveltejs/adapter-node": "^1.1.0",
+		"@sveltejs/adapter-vercel": "^1.0.1"
 	}
 }
