--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-node": "^1.1.0",
-		"@sveltejs/adapter-vercel": "^1.0.1"
+		"@sveltejs/adapter-vercel": "^1.0.0-next.88"
 	}
 }
